Replace global secrets with user auth
